apps/dashboard/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    name: dashboard
